--- a/town_hall/styles/c05x_sorkin.css
+++ b/town_hall/styles/c05x_sorkin.css
@@ -5,6 +5,7 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 100%;
 	width: 650px;
+	margin: 0 auto;
 	border: 10px double blue;
 	text-align: center;
 }
