--- a/town_hall/styles/c05x_sorkin.css
+++ b/town_hall/styles/c05x_sorkin.css
@@ -11,6 +11,10 @@ body {
 main{
 	padding: 1em;
 }
+main h1{
+	font-size: 150%
+	color: blue;
+}
 footer{
 	margin: 0 1em;
 	border-top: solid blue;
