--- a/town_hall/styles/c05x_sorkin.css
+++ b/town_hall/styles/c05x_sorkin.css
@@ -15,8 +15,8 @@ main{
 main h1{
 	font-size: 150%;
 	color: blue;
-	margin: .25em;
-	padding: .25em;
+	margin: 5px;
+	padding: 10px;
 }
 main h2{
 	font-size: 125%;
