--- a/town_hall/styles/c05x_sorkin.css
+++ b/town_hall/styles/c05x_sorkin.css
@@ -19,8 +19,8 @@ img{
 main h1{
 	font-size: 150%;
 	color: blue;
-	margin: 0px;
-	padding-bottom: 10px;
+	margin-bottom: 0px;
+	padding-bottom: 5px;
 }
 main h2{
 	font-size: 125%;
