--- a/town_hall/styles/c05x_sorkin.css
+++ b/town_hall/styles/c05x_sorkin.css
@@ -13,11 +13,10 @@ main{
 	padding: 40px
 }
 p{
-	margin: 10px 10px 10px 10px;
+	padding: 5px
 }
 img{
 	float: left;
-	padding: 2px;
 }
 main h1{
 	font-size: 150%;
