--- a/town_hall/styles/c05x_sorkin.css
+++ b/town_hall/styles/c05x_sorkin.css
@@ -24,7 +24,11 @@ blockquote{
 }
 img{
 	float: left;
+	margin-right: 15px;
+	margin-bottom: 15px;
+
 }
+
 main h1{
 	font-size: 150%;
 	color: blue;
