--- a/town_hall/styles/c05x_sorkin.css
+++ b/town_hall/styles/c05x_sorkin.css
@@ -21,9 +21,8 @@ p{
 }
 blockquote{
 	text-align: left;
-	margin-left: 20px;
-	margin-right: 20px;
-	padding: 10px 0;
+	margin: 0px;
+	padding: 5px 0;
 }
 img{
 	float: left;
