--- a/town_hall/styles/c05x_sorkin.css
+++ b/town_hall/styles/c05x_sorkin.css
@@ -43,6 +43,11 @@ main h2{
 main h3{
 	font-size: 115%;
 }
+ul li{
+	text-align: left;
+	margin: 1px;
+	padding: 2px;
+}
 footer{
 	font-size: 90%;
 	margin: 0 1em;
